--- a/java/work/build.gradle
+++ b/java/work/build.gradle
@@ -2,6 +2,22 @@ plugins {
     id 'java'
 }
 
+plugins {
+    id 'java'
+}
+
+group 'br.ufu.sd'
+version '1.0-SNAPSHOT'
+
+sourceCompatibility = 1.8
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+}
 group 'br.ufu.sd'
 version '1.0-SNAPSHOT'
 
