--- a/java/work/build.gradle
+++ b/java/work/build.gradle
@@ -13,6 +13,8 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compileOnly 'org.projectlombok:lombok:1.18.2'
+    apt 'org.projectlombok:lombok:1.18.2'
 }
 group 'br.ufu.sd'
 version '1.0-SNAPSHOT'
