--- a/java/work/build.gradle
+++ b/java/work/build.gradle
@@ -25,4 +25,7 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile 'junit:junit:4.12'
+    compile 'junit:junit:4.12'
+    compile 'junit:junit:4.12'
 }
