--- a/java/work/build.gradle
+++ b/java/work/build.gradle
@@ -13,6 +13,7 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.1'
 }
 group 'br.ufu.sd'
 version '1.0-SNAPSHOT'
