--- a/work/src/main/resources/configuration.properties
+++ b/work/src/main/resources/configuration.properties
@@ -1,5 +1,6 @@
 server.port=8080
-server.log.file.path=src/main/br/ufu/sd/work/log/log.txt
+server.log.file.path=src/main/br/ufu/sd/work/log/log
+server.log.snapshot.file.path=src/main/br/ufu/sd/work/log/snap
 server.log.snapshot.interval=1000
 server.id=server-1
 server.key.range=1-5
