fixing snapshot creation to include data from previous snapshot and add snapshot task to server start

--- a/work/src/main/resources/configuration.properties
+++ b/work/src/main/resources/configuration.properties
@@ -1,6 +1,5 @@
 server.port=61666
-server.log.file.path=src/main/java/br/ufu/sd/work/log/log.txt
-server.log.snapshot.file.path=src/main/br/ufu/sd/work/log/snap
-server.log.snapshot.interval=1000
+server.log.file.path=src/main/java/br/ufu/sd/work/log/
+server.log.snapshot.interval=20000
 server.id=1
 server.key.range=1-5
