--- a/work/src/main/resources/configuration.properties
+++ b/work/src/main/resources/configuration.properties
@@ -1,4 +1,7 @@
-server.port=61666
+server.chord-node.first-ip=127.0.0.1
+server.chord-node.first-port=51666
+server.chord-node.jump-next-port=1000
+server.chord-node.number-of-nodes=5
+server.chord-node.number-of-bit-id=32
 server.log.file.path=src/main/java/br/ufu/sd/work/server/log/
 server.log.snapshot.interval=20000
-server.id=1
