adding CRUD on chord

--- a/work/src/main/resources/configuration.properties
+++ b/work/src/main/resources/configuration.properties
@@ -3,5 +3,5 @@ server.chord-node.first-port=51666
 server.chord-node.jump-next-port=1000
 server.chord-node.number-of-nodes=5
 server.chord-node.number-of-bit-id=32
-server.log.file.path=src/main/java/br/ufu/sd/work/server/log/
-server.log.snapshot.interval=20000
+server.log.file.path=temp/log
+server.log.snapshot.interval=2000000000
