fixing log manager folder

--- a/work/src/main/resources/configuration.properties
+++ b/work/src/main/resources/configuration.properties
@@ -3,5 +3,5 @@ server.chord-node.first-port=51666
 server.chord-node.jump-next-port=1000
 server.chord-node.number-of-nodes=5
 server.chord-node.number-of-bit-id=5
-server.log.file.path=temp/file
+server.log.file.path=tmp/file/
 server.log.snapshot.interval=2000000000
