monster refactor, solve problem with excessive creation of threads and sockets, solve problem with non natural configuration of nodes, last node get remain keys

--- a/work/src/main/resources/configuration.properties
+++ b/work/src/main/resources/configuration.properties
@@ -2,6 +2,8 @@ server.chord-node.first-ip=127.0.0.1
 server.chord-node.first-port=51666
 server.chord-node.jump-next-port=1000
 server.chord-node.number-of-nodes=5
-server.chord-node.number-of-bit-id=5
+server.chord-node.number-of-bit-id=10
 server.log.file.path=tmp/file/
 server.log.snapshot.interval=2000000000
+server.queue.await-command=100
+server.queue.await-log=500
