parcial, cluster mode in mode ring

--- a/work/src/main/resources/configuration.properties
+++ b/work/src/main/resources/configuration.properties
@@ -3,6 +3,7 @@ server.chord-node.first-port=51666
 server.chord-node.jump-next-port=1000
 server.chord-node.number-of-nodes=5
 server.chord-node.number-of-bit-id=10
+server.chord-node.machines-per-node=3
 server.log.file.path=tmp/file/
 server.log.snapshot.interval=2000000000
 server.queue.await-command=100
